# OOM-Engine

./: .gitignore  CMakeLists.txt  README.md
Engine/Header/: CEngine.hpp  CEngine.inl  CTime.hpp
Engine/Source/: CEngine.cpp  CMakeLists.txt  CTime.cpp  Main.cpp
Engine/Source/Audio/: CAudioBuffer.cpp  CAudioDecoder.cpp  CAudioEngine.cpp  CAudioListener3D.cpp  CAudioSource3D.cpp  CWaveHeader.cpp
Engine/Source/Built-in/Mesh/: Cube.cpp  Mesh.cpp
Engine/Source/Built-in/Script/: S_Camera.cpp  S_CameraController.cpp  S_CameraRotator.cpp  S_Collision.cpp  S_DirectionalLight.cpp  S_LookAt.cpp  S_PointLight.cpp  S_Rotate.cpp  S_RotateLight.cpp  S_Scale.cpp  S_Spawner.cpp  S_Text.cpp  S_Translate.cpp
Engine/Source/Built-in/Shader/: Shader.cpp
Engine/Source/Composite/: CGameObject.cpp  CObject.cpp  CTransform.cpp  IComponent.cpp
Engine/Source/Composite/Component/: CBehavior.cpp
Engine/Source/Core/Debug/: SLogger.cpp
Engine/Source/Core/Standard/: CString.cpp
Engine/Source/Engine/: CConfig.cpp  CEngine.cpp  CTime.cpp
Engine/Source/Game/: Game.cpp  Prefabs.cpp  S_CameraRotator.cpp
Engine/Source/Game/Floppy/: S_Floppy.cpp  S_GameManager.cpp
Engine/Source/Game/Floppy/Asset/: CAssetWave.cpp  IAsset.cpp  S_AssetSpawner.cpp  S_BigAsset.cpp  S_BusAsset.cpp  S_ConveyorAsset.cpp  S_SpawnerManager.cpp  S_SuperAsset.cpp
Engine/Source/Game/Floppy/Controller/: S_AlarmController.cpp  S_ConveyorController.cpp  S_DoorController.cpp
Engine/Source/Game/Floppy/Player/: S_Player.cpp
Engine/Source/Game/Floppy/Prompt/: CInputManager.cpp  S_CommandPrompt.cpp
Engine/Source/Game/Floppy/Util/: S_ConveyorAudioController.cpp  S_DestroySound.cpp  S_SoundSource.cpp
Engine/Source/Game/Prefab/: Prefab.cpp  Prefabs.cpp
Engine/Source/Import/: CMeshImporter.cpp  CTextureImporter.cpp
Engine/Source/Physics/: CBoxCollider.cpp  CCollision.cpp  CContactListener.cpp  CPhysicWorld.cpp  CRayCast.cpp  CRigidBody.cpp
Engine/Source/Render/: CCamera.cpp  CRenderer.cpp  CWindow.cpp
Engine/Source/Render/Gizmos/: CDebugGrid.cpp  CGizmosAudioSource.cpp  CGizmosBox.cpp  CGizmosCollider.cpp  CGizmosCone.cpp  CGizmosDirectionalLight.cpp  CGizmosLine.cpp  CGizmosManager.cpp  CGizmosPointLight.cpp  CGizmosRay.cpp  CGizmosTransform.cpp
Engine/Source/Render/Material/: CMaterial.cpp
Engine/Source/Render/Mesh/: CMeshFilter.cpp  CMeshRenderer.cpp
Engine/Source/Render/PostProcessing/: CFXAAEffect.cpp  CFogEffect.cpp  CIdentityEffect.cpp  CPostProcessingStack.cpp  CVignetteEffect.cpp  IPostEffect.cpp
Engine/Source/Render/Renderer/: CMeshRenderer.cpp  CTexRenderer.cpp  CTextRenderer.cpp  CUISpriteRenderer.cpp  IRenderer.cpp
Engine/Source/Render/Shader/: CShaderStandard.cpp  CShaderText.cpp  CShaderUISprite.cpp  CShaderUnitColor.cpp  CShaderUnlitLine.cpp  CShaderUnlitTexture.cpp  CShaderUnlitTransparent.cpp  IShader.cpp  SShaderCompiler.cpp  SShaderManager.cpp
Engine/Source/Resource/: CMesh.cpp
Engine/Source/SDK/: SDK.cpp
Engine/Source/Util/: CBound.cpp
Lib/: glew32.lib  glew32d.lib  glfw3.lib  glfw3d.lib  ogg.lib  oggd.lib  qu3e.lib  qu3ed.lib  vorbis.lib  vorbisd.lib  vorbisenc.lib  vorbisfile.lib
(+129 files in other folders)
